<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fantasyscout.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_analysts"
        android:name="com.example.fantasyscout.ui.analysts.AnalystsFragment"
        android:label="@string/title_analysts"
        tools:layout="@layout/fragment_analysts" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.fantasyscout.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.fantasyscout.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.fantasyscout.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.fantasyscout.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_contactUs"
            app:destination="@id/navigation_contactUs" />
    </fragment>

    <fragment
        android:id="@+id/navigation_contactUs"
        android:name="com.example.fantasyscout.ui.contactus.ContactUsFragment"
        android:label="@string/title_contactUs"
        tools:layout="@layout/fragment_chat" />

</navigation>